--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3,7 +3,7 @@
 :root {
   --color-primary: #2a6beb;
   --color-secondary: #59b8eb;
-  --color-tertiary: #9873eb;
+  --color-tertiary: #fff;
   --color-quaternary: #4447eb;
   --color-quinary: #b352eb;
   --color-senary: #9294eb;
@@ -16,4 +16,27 @@
   margin: 0;
   padding: 0;
   font-family: "Koh Santepheap", serif;
+}
+
+header {
+  background-color: var(--color-primary);
+  color: var(--color-tertiary);
+  padding: 3rem;
+  text-align: center;
+}
+
+footer {
+  background-color: var(--color-primary);
+  color: var(--color-tertiary);
+  padding: var(--size-medium);
+  text-align: center;
+}
+
+a {
+  color: var(--color-tertiary);
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--color-secondary);
 }
