--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -64,12 +64,17 @@ a:hover {
   color: var(--color-secondary);
 }
 
-input [type = "date"] {
+#endDate {
   background-color: yellow;
   width: var(--size-large);
-  padding: var(--size-small);
+  height: var(--size-small);
 }
 
-/* todo: entender porque não está puxando o estilo para os campos data */
+input[type="date"] {
+  background-color: yellow;
+  width: var(--size-large);
+  height: var(--size-small);
+}
+
 /* todo: finalizar estilização do botão */
 /* todo: estilizar página result */
