Atualiza estilos de campos de data no CSS, alterando a cor de fundo para uma variável e removendo estilos desnecessários

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -64,14 +64,8 @@ a:hover {
   color: var(--color-secondary);
 }
 
-#endDate {
-  background-color: yellow;
-  width: var(--size-large);
-  height: var(--size-small);
-}
-
 input[type="date"] {
-  background-color: yellow;
+  background-color: var(--color-tertiary);
   width: var(--size-large);
   height: var(--size-small);
 }
