Atualiza informações do autor no rodapé e ajusta o padding do footer no CSS

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -34,7 +34,7 @@ main {
 footer {
   background-color: var(--color-primary);
   color: var(--color-tertiary);
-  padding: var(--size-medium);
+  padding: var(--size-small);
   text-align: center;
 }
 
