Atualiza informações do autor no rodapé e remove link do Bootstrap; ajusta cores e tamanhos no CSS

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -16,10 +16,10 @@
   margin: 0;
   padding: 0;
   font-family: "Koh Santepheap", serif;
+  background-color: var(--color-primary);
 }
 
 header {
-  background-color: var(--color-primary);
   color: var(--color-tertiary);
   padding: 3rem;
   text-align: center;
@@ -27,7 +27,7 @@ header {
 
 main {
   background-color: var(--color-secondary);
-  padding: var(--size-medium);
+  padding: var(--size-small);
   text-align: center;
 }
 
@@ -72,7 +72,6 @@ input[type="date"] {
 }
 
 input[type="button"] {
-  background-color: var(--color-primary);
   color: var(--color-tertiary);
   width: var(--size-large);
   height: var(--size-small);
